# cub3d

./: CMakeLists.txt  Makefile  cub3d.h  main.c  test.cub
base/: ft_base.c  ft_dist_and_dot_wall.c  ft_draw_sprite.c  ft_draw_srite.c  ft_full_window.c  ft_game_first_param.c  ft_key_press.c  ft_key_scan.c  ft_print_line.c  ft_screenshot.c  ft_xmp_to_img.c
error/: error_1.c
exit/: error_1.c  ft_exit.c
libft/: Makefile  ft_atoi.c  ft_strdup.c  get_next_line.c  get_next_line.h  get_next_line_utils.c
parser/: ft_check_args.c  ft_chek_map.c  ft_make_array.c  ft_parser.c  ft_take_param.c  ft_take_param_2.c  parser.c  parser.h
